# bazel-jdk19-coverage-repro

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  do-it.sh
src/main/java/repro/: App.java
src/test/java/repro/: TestApp.java
